# fastapi-ai

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app_streamlit.py  ollama_app.py  test_ollama.py
