[tool.isort]
src_paths = ['.']
skip_glob = ["migrations/*"]

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
in-place = true

[tool.ruff]
line-length = 80
indent-width = 2
exclude = [
    "migrations",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
exclude = ["migrations"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/settings/*",
    "*/wsgi.py",
    "*/asgi.py",
    "*/views.py",
    "manage.py",
    "*/admin.py"
]
parallel = true
concurrency = ["multiprocessing"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.poetry]
name = "fastapi-poetry-app"
version = "0.1.0"
description = "API con FastAPI y Poetry"
authors = ["Jonathan Meza <jduplantier44@gmail.com>"] 

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
ollama = "^0.5.1"
httpx = "^0.28.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
